[package]
name = "urt"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3.21"
slab = "0.4.6"
io-uring = { version = "0.5.2", features = ["unstable"] }
tokio = { version = "1.18.2", features = ["sync"] }
crossbeam-channel = "0.5.5"
libc = "0.2.126"
parking_lot = "0.12.1"
bit-set = "0.5.2"
socket2 = "0.4.4"

[profile.release]
debug = true